app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: nguuyentuantrung2802/demo-user
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
      - name: task-service
        image: nguuyentuantrung2802/demo:latest
        ports:
        - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  selector:
    app: task-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: task-app-route
spec:
  host: task-app.2012210.rahtiapp.fi
  to:
    kind: Service
    name: task-service
  tls:
    termination: passthrough
        
---


apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: user-app-route
spec:
  host: user-app.2012210.rahtiapp.fi
  to:
    kind: Service
    name: user-service
  tls:
    termination: passthrough
        
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mongodbtaskuser-app-route
spec:
  host: mongo-app.2012210.rahtiapp.fi
  to:
    kind: Service
    name: mongo
  tls:
    termination: passthrough
        
---
